@@ -159,7 +159,7 @@ Mining.Skills.SuperBreaker.Other.On=[[GREEN]]{0}[[DARK_GREEN]] has used [[RED]]M
 Mining.Skills.SuperBreaker.Refresh=[[GREEN]]Schopnost [[YELLOW]]Super Breaker [[GREEN]]obnovena!
 Mining.Skillup=Dovednost v dolovani byla navysena o {0}. Celkem ({1})
 Mining.Blast.Boom=[[GRAY]]**VYBUCH**
-Mining.Blast.Effect=+{0} v\u00fdnos rudy, -{1} v\u00fdnos trosek, {2}x ko\u0159ist
+Mining.Blast.Effect=+{0} v\u00fdnos rudy, {1}x ko\u0159ist
 Mining.Blast.Radius.Increase=Navyseni radiusu vybuchu: [[YELLOW]]+{0}
 Mining.Blast.Rank=V\u00fdbu\u0161n\u00e9 t\u011b\u017een\u00ed [[YELLOW]] Rank {0}/8 [[GRAY]]({1})
 Mining.Blast.Other.On=[[GREEN]]{0}[[DARK_GREEN]] pou\u017eil [[RED]]V\u00fdbu\u0161n\u00e9 T\u011b\u017een\u00ed!
