@@ -601,7 +601,7 @@ Mining.Ability.Locked.2                          = GESPERRT bis Skill {0}+  (Exp
 Mining.Ability.Lower                             = &7**Du senkst deine SPITZHACKE**
 Mining.Ability.Ready                             = &a**Deine SPITZHACKE ist bereit**
 Mining.Blast.Boom                                = &7**BOOM**
-Mining.Blast.Effect                              = +{0} Erze -{1} Schutt, {2}x Drops
+Mining.Blast.Effect                              = +{0} Erze {1}x Drops
 Mining.Blast.Other.On                            = &a{0}&2 benutzte &cZ\u00FCndstoff!
 Mining.Blast.Refresh                             = &aDein &eZ\u00FCndstoff &aist wieder bereit!
 Mining.Listener                                  = Bergbau:
