@@ -330,7 +330,7 @@ Mining.Skills.SuperBreaker.Refresh=[[GREEN]]Your [[YELLOW]]Super Breaker [[GREEN
 #Blast Mining
 Mining.Blast.Boom=[[GRAY]]**BOOM**
 Mining.Blast.Cooldown=
-Mining.Blast.Effect=+{0} ore yield, -{1} debris yield, {2}x drops
+Mining.Blast.Effect=+{0} ore yield,  {1}x drops
 Mining.Blast.Other.On=[[GREEN]]{0}[[DARK_GREEN]] has used [[RED]]Blast Mining!
 Mining.Blast.Refresh=[[GREEN]]Your [[YELLOW]]Blast Mining [[GREEN]]ability is refreshed!
 #REPAIR
