@@ -161,7 +161,7 @@ Mining.Skills.SuperBreaker.Other.On=[[GREEN]]\u00a1{0}[[DARK_GREEN]] us\u00f3 [[
 Mining.Skills.SuperBreaker.Refresh=[[GREEN]]\u00a1Tu habilidad de [[YELLOW]]S\u00faper Destructor [[GREEN]]est\u00e1 refrescada!
 Mining.Skillup=Habilidad de Miner\u00eda incrementada en {0}. Total ({1})
 Mining.Blast.Boom=[[GRAY]]**BOOM**
-Mining.Blast.Effect=+ {0} mineral de rendimiento, - {1} rendimiento de los desechos, {2} x drops
+Mining.Blast.Effect=+ {0} mineral de rendimiento, {1} x drops
 Mining.Blast.Radius.Increase=Incrementado Radio de Explosi\u00f3n: [[YELLOW]]+{0}
 Mining.Blast.Rank=Miner\u00eda Explosiva: [[YELLOW]] Rango {0}/8 [[GRAY]]({1})
 Mining.Blast.Other.On=[[GREEN]]\u00a1{0}[[DARK_GREEN]] us\u00f3 [[RED]]Miner\u00eda Explosiva!
