@@ -181,7 +181,7 @@ Mining.Skills.SuperBreaker.Other.On=[[GREEN]]{0}[[DARK_GREEN]] a utilis\u00e9 [[
 Mining.Skills.SuperBreaker.Refresh=[[GREEN]]Votre comp\u00e9tence [[YELLOW]]Broyeur [[GREEN]]est pr\u00eate !
 Mining.Skillup=Le talent Minage augmente de {0}. Total ({1})
 Mining.Blast.Boom=[[GRAY]]**BOUM**
-Mining.Blast.Effect=+{0} de r\u00e9colte des minerais, -{1} de r\u00e9colte des d\u00e9bris, {2}x les r\u00e9compenses
+Mining.Blast.Effect=+{0} de r\u00e9colte des minerais, {1}x les r\u00e9compenses
 Mining.Blast.Radius.Increase=Rayon d\'explosion : [[YELLOW]]+{0}
 Mining.Blast.Rank=Minage explosif : [[YELLOW]]Rang {0}/8 [[GRAY]]({1})
 Mining.Blast.Other.On=[[GREEN]]{0}[[DARK_GREEN]] a utilis\u00e9 [[RED]]Minage explosif !
