@@ -338,7 +338,7 @@ Mining.Skills.SuperBreaker.Refresh=[[GREEN]]La tua capacit\u00E0 [[YELLOW]]Super
 #Blast Mining
 Mining.Blast.Boom=[[GRAY]]**BOOM**
 Mining.Blast.Cooldown=
-Mining.Blast.Effect=+{0} minerale raccolto, -{1} macerie prodotte, drop {2}x
+Mining.Blast.Effect=+{0} minerale raccolto, drop {1}x
 Mining.Blast.Other.On=[[GREEN]]{0}[[DARK_GREEN]] ha usato [[RED]]Estrazione Esplosiva!
 Mining.Blast.Refresh=[[GREEN]]La tua capacit\u00E0 [[YELLOW]]Estrazione Esplosiva [[GREEN]]si \u00E8 rigenerata!
 
