@@ -194,7 +194,7 @@ Mining.Skillup=[[YELLOW]]Habilidade de Mineracao foi aumentada para {0}. Total (
 
 #Mineracao Explosiva
 Mining.Blast.Boom=[[GRAY]]**BOOM**
-Mining.Blast.Effect=+{0} Rendimento de Minerios, -{1} Prejuizo de Detritos, {2}x drops
+Mining.Blast.Effect=+{0} Rendimento de Minerios, {1}x drops
 Mining.Blast.Radius.Increase=[[RED]]Aumento no Raio de explosao: [[YELLOW]]+{0}
 Mining.Blast.Rank=[[RED]]Mineracao Explosiva: [[YELLOW]] Rank {0}/{1} [[GRAY]]({2})
 Mining.Blast.Other.On=[[GREEN]]{0}[[DARK_GREEN]] usou [[RED]]Mineracao Explosiva!
